--- a/.gitignore
+++ b/.gitignore
@@ -303,3 +303,5 @@ pip-selfcheck.json
 # End of https://www.toptal.com/developers/gitignore/api/python,venv,dotenv,pycharm
 
 data/
+/config.json
+/transactions.json
